# llm_rag_project

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  start_ollama.sh
.github/workflows/: python-app.yml
app/: main.py  rag_pipeline.py  utils.py
data/sample_docs/: documento.txt
tests/: fakes.py  test_rag_pipeline.py  test_utils.py
